src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__one_cycle_aba.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error: Recursive data structure `A -> B -> A` has infinite size
  ┌─ <internal>:2:18
  │
2 │             TYPE A : STRUCT
  │                  ^ Recursive data structure `A -> B -> A` has infinite size
  ·
6 │             TYPE B : STRUCT
  │                  - see also


