src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__one_cycle_abca.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: res
---
SemanticError { message: "Invalid recursive data structure: `A -> B -> C -> A`", range: [SourceRange { range: 18..19 }, SourceRange { range: 102..103 }, SourceRange { range: 186..187 }], err_no: pou__recursive_data_structure }

