src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__one_cycle_self_a.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: res
---
SemanticError { message: "Recursive data structure `A -> A` has infinite size", range: [SourceLocation { span: Range(TextLocation { line: 1, column: 17, offset: 18 }..TextLocation { line: 1, column: 18, offset: 19 }) }], err_no: pou__recursive_data_structure }

