src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__one_cycle_with_multiple_identical_members_aba.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: make_readable(&diagnostics)
---
SemanticError { message: "Recursive data structure `A -> B -> A` has infinite size", range: [SourceRange { range: 18..19 }, SourceRange { range: 152..153 }], err_no: pou__recursive_data_structure }

