src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__two_cycles_with_branch.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: res
---
SemanticError { message: "Invalid recursive data structure: `F -> G -> H -> I -> F`", range: [SourceRange { range: 354..355 }, SourceRange { range: 461..462 }, SourceRange { range: 545..546 }, SourceRange { range: 629..630 }], err_no: pou__recursive_data_structure }
SemanticError { message: "Invalid recursive data structure: `B -> C -> E -> F -> B`", range: [SourceRange { range: 102..103 }, SourceRange { range: 186..187 }, SourceRange { range: 270..271 }, SourceRange { range: 354..355 }], err_no: pou__recursive_data_structure }

